--- a/README.rdoc
+++ b/README.rdoc
@@ -79,3 +79,4 @@ You're welcome to fork this project and send pull requests. I want to thank spec
 = To Do
 * 
 Copyright (c) 2009-2012 sagar junnarkar, released under the MIT license
+Contributers yogesh,yatish,sagar
