--- a/README.rdoc
+++ b/README.rdoc
@@ -80,3 +80,8 @@ You're welcome to fork this project and send pull requests. I want to thank spec
 * 
 Copyright (c) 2009-2012 sagar junnarkar, released under the MIT license
 Contributers yogesh,yatish,sagar
+
+
+
+
+Please make these changes
